--- a/CotizacionDolly.html
+++ b/CotizacionDolly.html
@@ -224,6 +224,9 @@
                 <p>Firma de Aprobación</p>
             </div>
         </div>
+<div class="footer-logo-container">
+            <img src="https://drive.google.com/uc?export=view&id=106t83GB4MEcbQ3E636BiPS3-19pKb_-1" alt="Empresa Certificada ISO 9001:2015" class="iso-logo">
+        </div>
     </div>
 
 <script>
