--- a/CotizacionDolly.html
+++ b/CotizacionDolly.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF--8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cotización - Talleres Barrera</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://ramcxn.github.io/Modificacion/cotizacion.css">
+    <link rel="stylesheet" href="cotizacion.css"> 
 </head>
 <body>
     <div class="container">
@@ -184,27 +184,22 @@
                 <p><strong>Datos Bancarios para Depósito:</strong></p>
                 <p><strong>Titular:</strong> TALLERES BARRERA S.A. DE C.V.</p>
                 <br>
-
                 <p><strong>SANTANDER</strong></p>
                 <p>Sucursal: 3945 | Cuenta: 65500883468</p>
                 <p>CLABE: 014 595 65500883468 7</p>
                 <br>
-
                 <p><strong>BBVA</strong></p>
                 <p>Sucursal: 1729 | Cuenta: 00450461113</p>
                 <p>CLABE: 012 580 00450461113 7</p>
                 <br>
-
                 <p><strong>CITIBANAMEX</strong></p>
                 <p>Sucursal: 0796 | Cuenta: 07966989054</p>
                 <p>CLABE: 002 595 07966989054 8</p>
                 <br>
-                
                 <p><strong>BANORTE</strong></p>
                 <p>Sucursal: 060 | Cuenta: 00060251843</p>
                 <p>CLABE: 072 595 00060251843 3</p>
                 <br>
-
                 <p>Favor de enviar su notificación de depósito a los siguientes correos: <strong>contabilidad@talleresbarrera.com</strong> y <strong>barrera@talleresbarrera.com</strong>.</p>
             </div>
             <p><strong>Consideraciones:</strong></p>
@@ -224,12 +219,12 @@
                 <p>Firma de Aprobación</p>
             </div>
         </div>
-<div class="footer-logo-container">
+
+        <div class="footer-logo-container">
             <img src="https://drive.google.com/uc?export=view&id=106t83GB4MEcbQ3E636BiPS3-19pKb_-1" alt="Empresa Certificada ISO 9001:2015" class="iso-logo">
         </div>
-    </div>
 
-<script>
+    </div> <script>
     document.addEventListener('DOMContentLoaded', () => {
         const urlParams = new URLSearchParams(window.location.search);
         const appName = "NewApp-1254688";
