--- a/CotizacionDolly.html
+++ b/CotizacionDolly.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cotización - Talleres Barrera</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="cotizacion.css"> 
+    <link rel="stylesheet" href="https://ramcxn.github.io/Modificacion/cotizacion.css"> 
 </head>
 <body>
     <div class="container">
@@ -221,7 +221,7 @@
         </div>
 
         <div class="footer-logo-container">
-            <img src="https://drive.google.com/uc?export=view&id=106t83GB4MEcbQ3E636BiPS3-19pKb_-1" alt="Empresa Certificada ISO 9001:2015" class="iso-logo">
+            <img src="https://raw.githubusercontent.com/ramcxn/Modificacion/main/CER%20COMPANY%20-%20ISO%209001.png" alt="Empresa Certificada ISO 9001:2015" class="iso-logo">
         </div>
 
     </div> <script>
