--- a/CotizacionDolly.html
+++ b/CotizacionDolly.html
@@ -180,28 +180,49 @@
                     </tr>
                 </tbody>
             </table>
+
             <div class="bank-info">
                 <p><strong>Datos Bancarios para Depósito:</strong></p>
                 <p><strong>Titular:</strong> TALLERES BARRERA S.A. DE C.V.</p>
-                <br>
-                <p><strong>SANTANDER</strong></p>
-                <p>Sucursal: 3945 | Cuenta: 65500883468</p>
-                <p>CLABE: 014 595 65500883468 7</p>
-                <br>
-                <p><strong>BBVA</strong></p>
-                <p>Sucursal: 1729 | Cuenta: 00450461113</p>
-                <p>CLABE: 012 580 00450461113 7</p>
-                <br>
-                <p><strong>CITIBANAMEX</strong></p>
-                <p>Sucursal: 0796 | Cuenta: 07966989054</p>
-                <p>CLABE: 002 595 07966989054 8</p>
-                <br>
-                <p><strong>BANORTE</strong></p>
-                <p>Sucursal: 060 | Cuenta: 00060251843</p>
-                <p>CLABE: 072 595 00060251843 3</p>
-                <br>
+                <table class="bank-table">
+                    <thead>
+                        <tr>
+                            <th>Banco</th>
+                            <th>Sucursal</th>
+                            <th>Cuenta</th>
+                            <th>CLABE</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>SANTANDER</td>
+                            <td>3945</td>
+                            <td>65500883468</td>
+                            <td>014 595 65500883468 7</td>
+                        </tr>
+                        <tr>
+                            <td>BBVA</td>
+                            <td>1729</td>
+                            <td>00450461113</td>
+                            <td>012 580 00450461113 7</td>
+                        </tr>
+                        <tr>
+                            <td>CITIBANAMEX</td>
+                            <td>0796</td>
+                            <td>07966989054</td>
+                            <td>002 595 07966989054 8</td>
+                        </tr>
+                        <tr>
+                            <td>BANORTE</td>
+                            <td>060</td>
+                            <td>00060251843</td>
+                            <td>072 595 00060251843 3</td>
+                        </tr>
+                    </tbody>
+                </table>
                 <p>Favor de enviar su notificación de depósito a los siguientes correos: <strong>contabilidad@talleresbarrera.com</strong> y <strong>barrera@talleresbarrera.com</strong>.</p>
             </div>
+
             <p><strong>Consideraciones:</strong></p>
             <ul class="notes-list">
                 <li>El depósito inicial no es reembolsable.</li>
